Add and update base scripts

--- a/utils/config/crontab.conf
+++ b/utils/config/crontab.conf
@@ -1,3 +1,6 @@
-# m h  dom mon dow   command
-*/5 * * * *    /home/manti/www/apollo/.venv/bin/python /home/manti/www/apollo/apollo/sensors.py
-* 5 * * *    /home/manti/www/apollo/.venv/bin/python /home/manti/www/apollo/apollo/weather.py
+# Every hour
+0 * * * *        /home/manti/www/apollo/run.sh pumps
+
+# Every 5 minutes (with offset)
+*/5+1 * * * *    /home/manti/www/apollo/run.sh sensors
+*/5+2 * * * *    /home/manti/www/apollo/run.sh valve
