--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
-name = "apollo"
-version = "0.2.0"
-requires-python = ">=3.12"
+name = "coruscant"
+version = "4.0.0a"
+requires-python = ">=3.13"
 dependencies = [
     "fastapi==0.115.6",
     "pi1wire==0.3.0",
@@ -12,15 +12,17 @@ dependencies = [
     "smbus2==0.5.0",
     "uvicorn[standard]==0.34.0",
     "Adafruit-DHT==1.4.0 ; platform_machine == 'armv7l'",
+    "pre-commit>=4.5.0",
+    "pytest>=9.0.1",
 ]
 
 [project.optional-dependencies]
 dev = [
     "black>=24.10.0 ; platform_machine == 'x86_64'",
     "ipython>=8.31.0",
-    "pre_commit>=4.1.0 ; platform_machine == 'x86_64'",
+    "pre-commit>=4.5.0 ; platform_machine == 'x86_64'",
     "prospector>=1.13.3 ; platform_machine == 'x86_64'",
-    "pytest>=8.3.4 ; platform_machine == 'x86_64'",
+    "pytest>=9.0.1 ; platform_machine == 'x86_64'",
     "pyupgrade>=3.19.1 ; platform_machine == 'x86_64'",
 ]
 
@@ -30,7 +32,7 @@ skips = ["B101", "B308", "B703"]
 
 [tool.black]
 line-length = 120
-target_version = ["py312"]
+target_version = ["py313"]
 include = '\.pyi?$'
 exclude = '''
 /(
@@ -46,7 +48,7 @@ exclude = '''
 [tool.ruff]
 line-length = 120
 indent-width = 4
-target-version = "py312"
+target-version = "py313"
 
 [tool.ruff.lint]
 select = [
@@ -104,12 +106,11 @@ ignore-overlong-task-comments = true
 
 [tool.ruff.lint.isort]
 section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]
-known-third-party = ["apollo"]
 lines-after-imports = 2
 
 [tool.ruff.lint.isort.sections]
 # Group all local imports into a separate section.
-"apollo" = ["services", "settings"]
+"coruscant" = ["services", "settings"]
 
 [tool.ruff.lint.per-file-ignores]
 # Ignore "E402", "F403", "F405" (import violations) in __init__.py files.
