--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
 name = "coruscant"
-version = "4.0.0a"
-requires-python = ">=3.13"
+version = "4.0.0b"
+requires-python = ">=3.13,<3.14"
 dependencies = [
     "fastapi==0.115.6",
     "pi1wire==0.3.0",
