--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,29 +1,20 @@
 [project]
 name = "coruscant"
-version = "4.0.0b"
+version = "4.0.0rc1"
 requires-python = ">=3.13,<3.14"
 dependencies = [
-    "fastapi==0.115.6",
+    "Adafruit-DHT==1.4.0 ; platform_machine == 'armv7l'",
     "pi1wire==0.3.0",
     "psycopg2==2.9.10",
-    "requests==2.32.3",
+    "requests==2.32.4",
     "RPi.GPIO==0.7.1",
-    "RPLCD==1.3.1",
-    "smbus2==0.5.0",
-    "uvicorn[standard]==0.34.0",
-    "Adafruit-DHT==1.4.0 ; platform_machine == 'armv7l'",
-    "pre-commit>=4.5.0",
-    "pytest>=9.0.1",
 ]
 
 [project.optional-dependencies]
 dev = [
-    "black>=24.10.0 ; platform_machine == 'x86_64'",
     "ipython>=8.31.0",
-    "pre-commit>=4.5.0 ; platform_machine == 'x86_64'",
-    "prospector>=1.13.3 ; platform_machine == 'x86_64'",
-    "pytest>=9.0.1 ; platform_machine == 'x86_64'",
-    "pyupgrade>=3.19.1 ; platform_machine == 'x86_64'",
+    "pre-commit>=4.5.0",
+    "pytest>=9.0.1",
 ]
 
 [tool.bandit]
