--- a/utils/crontab.conf
+++ b/utils/crontab.conf
@@ -3,8 +3,8 @@
 20 * * * *        /home/manti/www/apollo/run.sh sync
 
 # Every 5 minutes (with offset)
-*/5+1 * * * *     /home/manti/www/apollo/run.sh sensors
+1-59/5 * * * *     /home/manti/www/apollo/run.sh sensors
 
 # Every 15 minutes (with offset)
-*/15+2 * * * *    /home/manti/www/apollo/run.sh servos
-*/15+5 * * * *    /home/manti/www/apollo/run.sh valve
+2-59/15 * * * *    /home/manti/www/apollo/run.sh servos
+5-59/15 * * * *    /home/manti/www/apollo/run.sh valve
