--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,10 +1,11 @@
 [project]
 name = "coruscant"
-version = "4.0.0rc1"
+version = "4.0.0"
 requires-python = ">=3.13,<3.14"
 dependencies = [
     "Adafruit-DHT==1.4.0 ; platform_machine == 'armv7l'",
     "pi1wire==0.3.0",
+    "pre-commit>=4.5.0",
     "psycopg2==2.9.10",
     "requests==2.32.4",
     "RPi.GPIO==0.7.1",
