--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "coruscant"
-version = "4.1.2"
+version = "4.1.3"
 requires-python = ">=3.13,<3.14"
 dependencies = [
     "Adafruit-DHT==1.4.0 ; platform_machine == 'armv7l'",
@@ -110,3 +110,4 @@ lines-after-imports = 2
 # Ignore "S" (flake8-bandit) and "N802" (function name should be lowercase) in tests and docs.
 # Ignore "RUF" (Ruff-specific rules) and "I" (isort) in migrations.
 "__init__.py" = ["E402", "F403", "F405"]
+"coruscant/tests/*" = ["E402"]
