--- a/utils/crontab.conf
+++ b/utils/crontab.conf
@@ -1,10 +1,10 @@
 # Every hour
 0 * * * *         /home/manti/www/coruscant/run.sh pumps
-20 * * * *        /home/manti/www/coruscant/run.sh sync
 
 # Every 5 minutes (with offset)
 1-59/5 * * * *     /home/manti/www/coruscant/run.sh sensors
+2-59/5 * * * *     /home/manti/www/coruscant/run.sh sync
 
 # Every 15 minutes (with offset)
-2-59/15 * * * *    /home/manti/www/coruscant/run.sh servos
+3-59/15 * * * *    /home/manti/www/coruscant/run.sh servos
 5-59/15 * * * *    /home/manti/www/coruscant/run.sh valve
