--- a/utils/crontab.conf
+++ b/utils/crontab.conf
@@ -1,3 +1,8 @@
+# Update everything on restart
+@reboot           /home/manti/www/coruscant/run.sh pumps
+@reboot           /home/manti/www/coruscant/run.sh sensors
+@reboot           /home/manti/www/coruscant/run.sh servos
+
 # Every hour
 0 * * * *         /home/manti/www/coruscant/run.sh pumps
 
